--- a/pasadia1.html
+++ b/pasadia1.html
@@ -13,27 +13,25 @@
         <li
           class="item"
           style="
-            background-image: url('https://cdn.mos.cms.futurecdn.net/dP3N4qnEZ4tCTCLq59iysd.jpg');
+            background-image: url('./assets/img/service/pasadia1.png');
           "
         >
           <div class="content">
-            <h2 class="title">"Lossless Youths"</h2>
+            <h2 class="title">"PASO DE ANGEL"</h2>
             <p class="description">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore
-              fuga voluptatum, iure corporis inventore praesentium nisi. Id
-              laboriosam ipsam enim.
+              ¿Y si nos vamos a experimentar una aventura en el cielo? 😶‍🌫🌫️. Nos vamos para El Paso del Ángel, la mejor aventura con desafíos al filo de una montaña. Disfruta de la emoción de los puentes colgantes, la Malla Catamarán (200 metros sobre el río Moniquirá), el Puente de Cristal sobre el Paso del Ángel, las alas más altas de Colombia y un Canopy de 230  metros de largo para que superes tus límites, además podrás recorrer senderos naturales a través de la montaña, un ejemplo de un turismo sostenible y respetuoso con la naturaleza. 👼🏻⛰️🧗🏻‍♂️🍃
             </p>
-            <button>Read More</button>
+            <button >Read More</button>
           </div>
         </li>
         <li
           class="item"
-          style="background-image: url('./sheets/pasadia1.png')"
+          style="background-image: url('./assets/img/service/pasadia2.png')"
         >
           <div class="content">
             <h2 class="title">"PASO DEL ANGEL, VILLA DE LEYVA"</h2>
             <p class="description">
-              un bonito destino en el cual te abarcas a precenciar las vista mas bonitas de villa de leyva
+              un bonito destino en el cual te abarcas a precenciar las vistas mas bonitas de villa de leyva
             </p>
             <button>obtener</button>
           </div>
@@ -41,7 +39,7 @@
         <li
           class="item"
           style="
-            background-image: url('https://wharferj.files.wordpress.com/2015/11/bio_north.jpg');
+            background-image: url('./assets/img/service/pasadia3.png');
           "
         >
           <div class="content">
@@ -57,7 +55,7 @@
         <li
           class="item"
           style="
-            background-image: url('https://images7.alphacoders.com/878/878663.jpg');
+            background-image: url('./assets/img/service/pasadia4.png');
           "
         >
           <div class="content">
