--- a/packages.html
+++ b/packages.html
@@ -94,11 +94,7 @@
                                                     <li><a href="single-blog.html">noticias</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="#">Paginas</a>
-                                                <ul class="submenu">
-                                                    <li><a href="elements.html">Elementos</a></li>
-                                                </ul>
-                                            </li>
+                                            
                                             <li><a href="contact.html">Contactanos</a></li>
                                         </ul>
                                     </nav>
@@ -315,7 +311,7 @@
                             <div class="place-cap">
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>9.1</span> </span>
-                                    <h3><a href="./pasadia9.html">cascadas el escobo</a></h3>
+                                    <h3><a href="./pasadia9.html">cascada el escobo</a></h3>
                                     <p class="dolor">paquete incluido <span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
@@ -460,7 +456,7 @@
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
-                                        <li><i class="far fa-clock"></i>3 Days</li>
+                                        <li><i class="far fa-clock"></i>1 Dia</li>
                                         <li><i class="fas fa-map-marker-alt"></i>Los choachi</li>
                                     </ul>
                                 </div>
@@ -470,18 +466,58 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-place mb-30">
                             <div class="place-img">
-                                <img src="assets/img/service/services9.jpg" alt="">
+                                <img src="./assets/img/service/pasadia17.png" alt="">
                             </div>
                             <div class="place-cap">
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>9.1</span> </span>
-                                    <h3><a href="./pasadia17.html">valle escondido de choachi</a></h3>
+                                    <h3><a href="./pasadia17.html">show de juegos artificiales</a></h3>
                                     <p class="dolor">paquete incluido <span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
-                                        <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>choachi</li>
+                                        <li><i class="far fa-clock"></i>1 Dia</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>boyaca</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6">
+                        <div class="single-place mb-30">
+                            <div class="place-img">
+                                <img src="assets/img/service/pasadia18.png" alt="">
+                            </div>
+                            <div class="place-cap">
+                                <div class="place-cap-top">
+                                    <span><i class="fas fa-star"></i><span>9.9</span> </span>
+                                    <h3><a href="./pasadia18.html">tour de luces navideñas por boyaca</a></h3>
+                                    <p class="dolor">paquete incluido <span></span></p>
+                                </div>
+                                <div class="place-cap-bottom">
+                                    <ul>
+                                        <li><i class="far fa-clock"></i>1 Dia</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>boyaca</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6">
+                        <div class="single-place mb-30">
+                            <div class="place-img">
+                                <img src="assets/img/service/pasadia19.png" alt="">
+                            </div>
+                            <div class="place-cap">
+                                <div class="place-cap-top">
+                                    <span><i class="fas fa-star"></i><span>9.9</span> </span>
+                                    <h3><a href="./pasadia19.html">festival de viento y cometa</a></h3>
+                                    <p class="dolor">paquete incluido <span></span></p>
+                                </div>
+                                <div class="place-cap-bottom">
+                                    <ul>
+                                        <li><i class="far fa-clock"></i>1 Dia</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>boyaca</li>
                                     </ul>
                                 </div>
                             </div>
@@ -506,7 +542,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-place mb-30">
                             <div class="place-img">
-                                <img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AEYmBYSHaZOlEuu-WpJYqvd7HXRF7vO36KJPhDOtFUS9d2CLrAMUhD6gEXHYyXHJGEZof-kj9bj_Cp2tJtAPtpNvVzFx_g71pw=w1960-h4240" alt="">
+                                <img src="./assets/img/service/services1.png" alt="">
                             </div>
                             <div class="place-cap">
                                 <div class="place-cap-top">
@@ -531,13 +567,13 @@
                             <div class="place-cap">
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>9.2</span> </span>
-                                    <h3><a href="./viajes2.html">norcasia, casas</a></h3>
+                                    <h3><a href="./viajes2.html">norcasia y rio de la miel</a></h3>
                                     <p class="dolor">paquete incluido <span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
                                         <li><i class="far fa-clock"></i>2 dias</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>casas</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>caldas</li>
                                     </ul>
                                 </div>
                             </div>
@@ -551,13 +587,13 @@
                             <div class="place-cap">
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>9.5</span> </span>
-                                    <h3><a href="viajes3.html">cañon del rio quejar</a></h3>
+                                    <h3><a href="viajes3.html">cañon del rio Guejar</a></h3>
                                     <p class="dolor">paquete incluido <span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
                                         <li><i class="far fa-clock"></i>2 dias</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>quejar</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>meta</li>
                                     </ul>
                                 </div>
                             </div>
@@ -577,7 +613,7 @@
                                 <div class="place-cap-bottom">
                                     <ul>
                                         <li><i class="far fa-clock"></i>2 dias</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>cesar</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>santander</li>
                                     </ul>
                                 </div>
                             </div>
@@ -597,7 +633,7 @@
                                 <div class="place-cap-bottom">
                                     <ul>
                                         <li><i class="far fa-clock"></i>2 dias</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>buenaventura</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>pacifico</li>
                                     </ul>
                                 </div>
                             </div>
